--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <h style="display: flex; justify-content: center; margin-top: 25px; font-size: 20px;">A QR code for my site!</h>
     <div id="qrpicture">
-        <img src="qr.PNG" width="300" height="300">
+        <img src="qr2.PNG" width="300" height="300">
     </div>
 
     <div id="qatitle">
